# pi_portal

./: .darglint  .dockerignore  .gitignore  .hadolint.yml  .pre-commit-config.yaml  .pydocstyle  .readthedocs.yml  .vale.ini  .yamllint.yml  .yapfignore  README.md  config.json  container  docker-compose.yml  pyproject.toml  testing_shim
.cicd-tools/boxes/bootstrap/pre-commit/: spelling-commit-message.sh
.cookiecutter/: cookiecutter.json
.github/: dependabot.yml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json  github-action-markdown-link-check.json
.github/config/workflows/: workflow-push.json
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: build_container.sh  build_release.sh  cli_test.sh  job-40-prebuild.sh  job-50-test-precommit.sh  job-95-package-debian.sh  job-95-package-docker.sh  job-95-package-filebeat.sh  setup.sh  shellcheck.sh  step-setup-environment.sh
.github/workflows/: push.yml  push_container.yml  push_wheel.yml  release_container.yml  release_pypi.yml  workflow-push.yml
.vale/Vocab/pi_portal/: accept.txt
assets/: Dockerfile  Makefile  cli.yml  dev  local.env
assets/bash/: .bash_git  .bash_profile  .bashrc
documentation/source/: conf.py  index.rst
documentation/source/codebase/: codebase.rst
documentation/source/project/: 0.overview.md  1.requirements.md  2.installation.md  3.cli_summary.rst  4.cli_reference.rst  5.configuration.rst  5.slack_bot.md  7.license.rst  cli.rst  configuration.rst  development.rst  readme.rst
markdown/: INSTALLATION.md  SLACK_BOT_SETUP.md
packaging/debian/: docker-compose.yml
packaging/debian/assets/: Dockerfile  architectures.yml  container_init.sh  container_test.sh  docker-compose.yml.j2
packaging/docker/assets/: Dockerfile  architectures.yml  container_init.sh  docker-compose.yml.j2
packaging/filebeat/: docker-compose.yml
packaging/filebeat/assets/: Dockerfile  architectures.yml  docker-compose.yml.j2
packaging/utils/: generate_compose.py
patches/: pep.patch
pi_portal/: __init__.py  __main__.py  app.py  cli.py  cli_machine.py  cli_user.py  config.py  conftest.py  container_init.sh  machine_cli.py
pi_portal/cli_commands/: door_monitor.py  installer.py  slack_bot.py  upload_video.py
pi_portal/cli_commands/bases/: command.py
pi_portal/cli_commands/cli_machine/: __init__.py  chatbot.py  contact_switch_monitor.py  task_scheduler.py  temperature_monitor.py  upload_snapshot.py  upload_video.py
pi_portal/cli_commands/cli_user/: __init__.py  version.py
pi_portal/cli_commands/mixins/: __init__.py  require_task_scheduler.py
pi_portal/cli_commands/tests/: conftest.py  test_slack_bot.py  test_temperature_monitor.py  test_upload_video.py  test_version.py
pi_portal/commands/: __init__.py  cron_scheduler.py  cron_videos.py  door_monitor.py  installer.py  load_state.py  slack_bot.py  temperature_monitor.py  upload_snapshot.py  upload_video.py  version.py
pi_portal/commands/bases/: __init__.py  command.py  file_command.py  toggle_command.py
pi_portal/commands/mixins/: state.py
pi_portal/commands/tests/: conftest.py  test_cron_scheduler.py  test_cron_videos.py  test_door_monitor.py  test_installer.py  test_load_state.py  test_slack_bot.py  test_temperature_monitor.py  test_upload_snapshot.py  test_upload_video.py  test_version.py
pi_portal/installation/: __init__.py  conftest.py  installer.py
pi_portal/installation/actions/: __init__.py  action_create_paths.py  action_manage_service.py  action_remote_files.py  action_render_templates.py
pi_portal/installation/filebeat/: filebeat.yml
pi_portal/installation/motion/: motion.conf
pi_portal/installation/scripts/: install.sh  portal  portal.sh
pi_portal/installation/services/: __init__.py  motion.py  supervisor.py
pi_portal/installation/steps/: __init__.py  step_configure_logz_io.py  step_configure_motion.py  step_ensure_root.py  step_initialize_data_paths.py  step_initialize_etc.py  step_initialize_logging.py  step_install_config_file.py  step_kill_motion.py  step_kill_supervisor.py  step_render_configuration.py  step_render_templates.py  step_start_supervisor.py
pi_portal/installation/supervisor/: supervisord.conf
pi_portal/installation/templates/: __init__.py  config_file.py
pi_portal/installation/tests/: conftest.py  test_installer.py
pi_portal/modules/: __init__.py  config_file.py  installer.py  linux.py  logger.py  monitor.py  motion.py  s3.py  slack.py  slack_cli.py  socket.py  state.py  supervisor.py
pi_portal/modules/collections/: __init__.py  limited_dictionary.py
pi_portal/modules/configuration/: __init__.py  config_file.py  logger.py  state.py  user_config.py
pi_portal/modules/cron/: __init__.py  conftest.py  scheduler.py
pi_portal/modules/general/: __init__.py
pi_portal/modules/integrations/: __init__.py  motion.py  s3.py  slack.py
pi_portal/modules/metaclasses/: post_init_caller.py
pi_portal/modules/mixins/: __init__.py  json_file.py  log_file.py  read_json_file.py  read_log_file.py  write_archived_log_file.py  write_log_file.py  write_unarchived_log_file.py
pi_portal/modules/python/: __init__.py  futures.py  metadata.py  mock.py  traceback.py  xmlrpc.py
pi_portal/modules/system/: __init__.py  file_security.py  file_system.py  installer.py  linux.py  metrics.py  process.py  socket.py  supervisor.py  supervisor_config.py  supervisor_process.py
pi_portal/modules/tasks/: README.md  __init__.py  config.py  conftest.py  enums.py  flags.py  scheduler.py  schema.py  service.py  service_client.py
pi_portal/modules/tests/: test_config_file.py  test_installer.py  test_linux.py  test_logger.py  test_monitor.py  test_motion.py  test_s3.py  test_slack.py  test_socket.py  test_state.py  test_supervisor.py
pi_portal/schema/: config_schema.json
pi_portal/stubs/humanize/: __init__.pyi
pi_portal/stubs/persistqueue/: __init__.pyi
pi_portal/stubs/pythonjsonlogger/: jsonlogger.pyi
pi_portal/stubs/sqlitedict/: __init__.pyi
pi_portal/tests/: conftest.py  test_cli.py  test_machine_cli.py  test_user_cli.py
scripts/: extras.sh
scripts/arm/: filebeat.sh
(+780 files in other folders)
