
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.coverage]

    [tool.coverage.report]
      exclude_lines = ["no cover"]
      ignore_errors = true
      precision = 1
      show_missing = true

    [tool.coverage.run]
      branch = true
      omit = ["*/test*", "setup.py"]
      source = ["."]

  [tool.isort]
    default_section = "FIRSTPARTY"
    include_trailing_comma = true
    indent = "    "
    length_sort = false
    line_length = 80
    multi_line_output = 3
    no_lines_before = "LOCALFOLDER"
    sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
    skip_glob = "*_pb2.py"

  [tool.mypy]
    ignore_missing_imports = false
    mypy_path = "pi_portal/stubs"

    [[tool.mypy.overrides]]
      ignore_missing_imports = true
      module = ["fake_rpi.*", "jsonschema.*", "RPi.*"]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Raspberry PI Door Logger"
    documentation = "https://github.com/pi-portal/pi_portal/README.md"
    exclude = ["**/tests/*", "**/*.sh"]
    homepage = "https://github.com/pi-portal/pi_portal"
    include = ["pi_portal/bin/*", "pi_portal/installation/**/*"]
    keywords = []
    license = "MPL-2.0"
    name = "pi_portal"
    readme = "README.md"
    repository = "https://github.com/pi-portal/pi_portal"
    version = "0.0.5"

    [tool.poetry.dependencies]
      "RPi.GPIO" = "^0.7.1"
      adafruit-circuitpython-dht = "^3.7.1"
      boto3 = "^1.24.26"
      click = "^8.0.3"
      fake-rpi = "^0.7.1"
      humanize = "^4.0.0"
      jsonschema = ">=3.2.0,<4.0.0"
      python = ">=3.7.0,<4.0.0"
      python-json-logger = "<2.0.3"
      requests = "^2.26.0"
      slack-sdk = "^3.11.2"

      [tool.poetry.dependencies.markupsafe]
        optional = true
        version = "<2.1.0"

      [tool.poetry.dependencies.pib_cli]
        extras = ["docs", "types"]
        optional = true
        version = "0.1.3"

      [tool.poetry.dependencies.sphinx-autodoc-typehints]
        optional = true
        version = "^1.12.0"

      [tool.poetry.dependencies.sphinx-click]
        optional = true
        version = "^3.0.2"

      [tool.poetry.dependencies.sphinx-jsonschema]
        optional = true
        version = "^1.17.1"

    [tool.poetry.dev-dependencies]
      darglint = "^1.8.1"
      freezegun = "^1.1.0"
      pydocstyle = "^6.1.1"
      types-boto3 = "^1.0.1"
      types-freezegun = "^1.1.3"
      types-pkg-resources = "^0.1.3"
      types-requests = "^2.28.11"

    [tool.poetry.extras]
      docs = ["markupsafe", "pib_cli", "sphinx-autodoc-typehints", "sphinx-click", "sphinx-jsonschema"]

    [[tool.poetry.packages]]
      include = "pi_portal"

    [tool.poetry.scripts]
      pi_portal = "pi_portal.cli:cli"

  [tool.pylint]

    [tool.pylint.basic]
      argument-rgx = "[a-z_][a-z0-9_]{1,30}$|^pk$"
      attr-rgx = "[a-z_][a-z0-9_]{2,30}$"
      bad-functions = "map,filter,apply,input"
      bad-names = "foo,bar,baz,toto,tutu,tata"
      class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$"
      class-rgx = "[A-Z_][a-zA-Z0-9]+$"
      const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$|^urls$|^app$|^User$|^router$"
      docstring-min-length = "-1"
      function-rgx = "[A-Za-z_][A-Za-z0-9_]{2,40}$"
      good-names = "i,j,k,ex,Run,_"
      inlinevar-rgx = "[A-Za-z_][A-Za-z0-9_]*$"
      method-rgx = "[A-Za-z_][A-Za-z0-9_]{2,50}$"
      module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
      no-docstring-rgx = ".*"
      required-attributes = []
      variable-rgx = "[a-z_][a-z0-9_]{2,30}$|^pk$"

    [tool.pylint.classes]
      defining-attr-methods = "__init__,__new__,setUp"
      ignore-iface-methods = "isImplementedBy,deferred,extends,names,namesAndDescriptions,queryDescriptionFor,getBases,getDescriptionFor,getDoc,getName,getTaggedValue,getTaggedValueTags,isEqualOrExtendedBy,setTaggedValue,isImplementedByInstancesOf,adaptWith,is_implemented_by"
      valid-classmethod-first-arg = "cls"
      valid-metaclass-classmethod-first-arg = "mcs"

    [tool.pylint.design]
      max-args = 5
      max-attributes = 8
      max-branches = 12
      max-locals = 15
      max-parents = 10
      max-public-methods = 200
      max-returns = 6
      max-statements = 50
      min-public-methods = 2

    [tool.pylint.exceptions]
      overgeneral-exceptions = "Exception"

    [tool.pylint.format]
      ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$"
      indent-string = "  "
      max-line-length = 80
      max-module-lines = 1000
      no-space-check = "trailing-comma,dict-separator"
      single-line-if-stmt = "no"

    [tool.pylint.imports]
      deprecated-modules = "regsub,TERMIOS,Bastion,rexec"
      ext-import-graph = ""
      import-graph = ""
      int-import-graph = ""

    [tool.pylint.master]
      ignore = ""
      ignore-patterns = ".*_pb2.py"
      load-plugins = ""
      persistent = "yes"
      profile = "no"

    [tool.pylint.message_control]
      disable = "locally-disabled,fixme,too-few-public-methods,bad-continuation,C0411,E5901,E1101,R0201"

    [tool.pylint.miscellaneous]
      notes = "FIXME,XXX,TODO"

    [tool.pylint.reports]
      comment = "no"
      evaluation = "10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10)"
      files-output = "no"
      output-format = "text"
      reports = "no"

    [tool.pylint.similarities]
      ignore-comments = "yes"
      ignore-docstrings = "yes"
      ignore-imports = "yes"
      min-similarity-lines = 4

    [tool.pylint.typecheck]
      generated-members = "REQUEST,acl_users,aq_parent"
      ignore-mixin-members = "yes"
      ignored-classes = "SQLObject"
      zope = "no"

    [tool.pylint.variables]
      additional-builtins = ""
      dummy-variables-rgx = "_$|dummy"
      ignored-argument-names = "_.*"
      init-import = "no"

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["pi_portal"]
